# Jules_remediator

./: .gitignore  AGENTS.md  README.md  all_files.txt  pyproject.toml
.artifacts/: implementation_plan.md  task.md  walkthrough.md
.github/workflows/: ci.yml  docker-publish.yml  docs-to-wiki.yml  publish.yml
.jules/: sentinel.md
_agent/workflows/: remediation-process.md
deploy/base/: deployment.yaml  jules-api-key-secret.yaml  kustomization.yaml  namespace.yaml  rbac.yaml
flux/: jules-remediator.yaml
jules-remediator-rs/: .dockerignore  .rustfmt.toml  Cargo.toml  Dockerfile  ZeroClaw.toml  tiers.toml
jules-remediator-rs/src/: main.rs
jules-remediator-rs/src/application/: mod.rs  remediation_workflow.rs  startup_master.rs
jules-remediator-rs/src/domain/: mod.rs  models.rs  ports.rs  security.rs  services.rs
jules-remediator-rs/src/infrastructure/: git_client.rs  jules_dispatcher.rs  k8s_watcher.rs  llm_client.rs  mlflow_logger.rs  mod.rs  orchestrator.rs  persistence.rs  remediator_impl.rs  startup_monitor.rs  zeroclaw.rs
jules-remediator-rs/tests/unit/: application_tests.rs  domain_tests.rs  infrastructure_tests.rs  k8s_tests.rs  mod.rs
k8s/base/: deployment.yaml  kustomization.yaml  litellm-secrets-sealed-secret.yaml  namespace.yaml  priority-class.yaml  remediator-deployment.yaml  service.yaml
ml/experiments/: tracking.py
wiki/: Aethelgard_Proposal.md  Business_Case.md  Data_Architecture.md  Home.md  LLMOps_Standard_2026.md  LLMops_Process.md  Planning.md  Project_Requirements.md  Remediation_Workflow.md  Security_Strategy.md  Solution_Architecture.md  Test_Strategy.md  _Sidebar.md
(+6 files in other folders)
