[tool.poetry]
name = "jules-remediator"
version = "0.1.0"
description = "Kubernetes Remediator Pod using Jules AI"
authors = ["Antigravity <antigravity@google.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.4"
mlflow = "^2.11.0"
kubernetes = "^29.0.0"
httpx = "^0.27.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
dependency-injector = "^4.41.0"
jules-sdk = "*"  # Community-supported Jules SDK

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
mypy = "^1.9.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
